[gd_scene load_steps=18 format=3 uid="uid://i15pdv8o7xx2"]

[ext_resource type="Script" path="res://scenes/game/levels/survive_the_child/survive_the_child.gd" id="1_03m0w"]
[ext_resource type="Texture2D" uid="uid://b7lrm5ahgea5o" path="res://assets/GameAssets/BabyBackground.png" id="1_c70jv"]
[ext_resource type="Texture2D" uid="uid://cdf7ipi14iw5o" path="res://assets/GameAssets/babybody.png" id="2_iohwp"]
[ext_resource type="Texture2D" uid="uid://iw88clq0umwj" path="res://assets/GameAssets/babyhead.png" id="3_3ix2g"]
[ext_resource type="Texture2D" uid="uid://blqjwwnuboocr" path="res://assets/GameAssets/teddy.png" id="4_44f8k"]
[ext_resource type="Texture2D" uid="uid://7du23n2ou6l" path="res://assets/GameAssets/glasses.png" id="5_bu7c2"]
[ext_resource type="Texture2D" uid="uid://dy4y8kem6n3qw" path="res://assets/GameAssets/backpack.png" id="6_nic0f"]
[ext_resource type="Texture2D" uid="uid://c7l3be2ganmlh" path="res://assets/GameAssets/handbag.png" id="7_ukc86"]
[ext_resource type="Texture2D" uid="uid://b8sm50islbpvl" path="res://assets/GameAssets/shoe.png" id="8_mdu25"]

[sub_resource type="Animation" id="Animation_2ohgy"]
resource_name = "Crying"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/CollisionShape2D/Baby/head:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.380841, 0.367602, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/CollisionShape2D/Baby/head:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(28.0993, 0.000100885), Vector2(0, 0), Vector2(-34.7106, 9.91746), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j1ti6"]
_data = {
"Crying": SubResource("Animation_2ohgy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_32bjk"]
radius = 122.0
height = 494.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u6bqu"]
radius = 60.0
height = 236.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uirtw"]
radius = 47.0
height = 170.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xul5h"]
radius = 86.0
height = 238.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c67n0"]
radius = 74.0
height = 148.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_idqcd"]
radius = 46.3444
height = 163.423

[node name="SurviveTheChild" type="Node2D"]
script = ExtResource("1_03m0w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j1ti6")
}

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(978, 554)
scale = Vector2(0.715, 0.715)
texture = ExtResource("1_c70jv")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
position = Vector2(970, 758)
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(6, 1)
shape = SubResource("CapsuleShape2D_32bjk")

[node name="Baby" type="Sprite2D" parent="CharacterBody2D/CollisionShape2D"]
position = Vector2(7.99994, -3.00006)
scale = Vector2(0.605, 0.605)
texture = ExtResource("2_iohwp")

[node name="head" type="Sprite2D" parent="CharacterBody2D/CollisionShape2D/Baby"]
texture = ExtResource("3_3ix2g")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(970, 758)

[node name="TeddyBody" type="StaticBody2D" parent="."]
position = Vector2(402, 702)
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeddyBody"]
position = Vector2(-4, -6)
shape = SubResource("CapsuleShape2D_u6bqu")

[node name="Teddy" type="Sprite2D" parent="TeddyBody/CollisionShape2D"]
position = Vector2(274, -264)
scale = Vector2(0.39, 0.39)
texture = ExtResource("4_44f8k")

[node name="GlassesBody" type="StaticBody2D" parent="."]
position = Vector2(1509, 981)
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GlassesBody"]
position = Vector2(1, 8)
rotation = -1.11701
shape = SubResource("CapsuleShape2D_uirtw")

[node name="Glasses" type="Sprite2D" parent="GlassesBody/CollisionShape2D"]
position = Vector2(51.7232, 560.002)
rotation = 1.11701
scale = Vector2(0.63, 0.63)
texture = ExtResource("5_bu7c2")

[node name="BackpackBody" type="StaticBody2D" parent="."]
position = Vector2(241, 970)
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackpackBody"]
position = Vector2(7, 2)
rotation = -0.139626
shape = SubResource("CapsuleShape2D_xul5h")

[node name="Backpack" type="Sprite2D" parent="BackpackBody/CollisionShape2D"]
position = Vector2(-243.938, -304.917)
rotation = 0.139626
scale = Vector2(0.42, 0.42)
texture = ExtResource("6_nic0f")

[node name="HandbagBody" type="StaticBody2D" parent="."]
position = Vector2(574, 904)
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandbagBody"]
position = Vector2(-11, -12)
shape = SubResource("CapsuleShape2D_c67n0")

[node name="Handbag" type="Sprite2D" parent="HandbagBody/CollisionShape2D"]
position = Vector2(-90.9999, -360)
scale = Vector2(0.46, 0.46)
texture = ExtResource("7_ukc86")

[node name="ShoeBody" type="StaticBody2D" parent="."]
position = Vector2(1290, 991)
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShoeBody"]
position = Vector2(2, 7)
rotation = 1.07338
shape = SubResource("CapsuleShape2D_idqcd")

[node name="Shoe" type="Sprite2D" parent="ShoeBody/CollisionShape2D"]
position = Vector2(-265.644, -269.401)
rotation = -1.07338
scale = Vector2(0.465, 0.465)
texture = ExtResource("8_mdu25")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="mouse_entered" from="CharacterBody2D" to="." method="_on_character_body_2d_mouse_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="input_event" from="TeddyBody" to="." method="_on_static_body_2d_input_event"]
[connection signal="mouse_entered" from="TeddyBody" to="." method="_on_static_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="TeddyBody" to="." method="_on_static_body_2d_mouse_exited"]
[connection signal="input_event" from="GlassesBody" to="." method="_on_static_body_2d_2_input_event"]
[connection signal="mouse_entered" from="GlassesBody" to="." method="_on_static_body_2d_2_mouse_entered"]
[connection signal="mouse_exited" from="GlassesBody" to="." method="_on_static_body_2d_2_mouse_exited"]
[connection signal="input_event" from="BackpackBody" to="." method="_on_static_body_2d_3_input_event"]
[connection signal="mouse_entered" from="BackpackBody" to="." method="_on_static_body_2d_3_mouse_entered"]
[connection signal="mouse_exited" from="BackpackBody" to="." method="_on_static_body_2d_3_mouse_exited"]
[connection signal="input_event" from="HandbagBody" to="." method="_on_static_body_2d_4_input_event"]
[connection signal="mouse_entered" from="HandbagBody" to="." method="_on_static_body_2d_4_mouse_entered"]
[connection signal="mouse_exited" from="HandbagBody" to="." method="_on_static_body_2d_4_mouse_exited"]
[connection signal="input_event" from="ShoeBody" to="." method="_on_static_body_2d_5_input_event"]
[connection signal="mouse_entered" from="ShoeBody" to="." method="_on_static_body_2d_5_mouse_entered"]
[connection signal="mouse_exited" from="ShoeBody" to="." method="_on_static_body_2d_5_mouse_exited"]
